# vae-llf

./: .gitignore  README.md  pyproject.toml  train.py
config/: config_sample.yaml
docs/source/: conf.py  modules.rst  utils.rst  vae_llf.loaders.rst  vae_llf.rst  vae_llf.utils.rst
features/: desikan.csv
features/adni/: structures_mri_adni.csv
features/dallas/: structures_mri_dallas.csv
features/dian/: structures_fdg_dian.csv  structures_mri_dian.csv  structures_pib_dian.csv
features/nacc/: structures_amyloid_nacc.csv  structures_fdg_nacc.csv  structures_mri_nacc.csv  structures_tau_nacc.csv
features/oasis/: structures_mri_oasis.csv
vae_llf/: loaders.py  models.py  utils.py
vae_llf/loaders/: __init__.py  adni.py  base.py  configuration.py  dallas.py  dian.py  nacc.py  oasis.py
vae_llf/models/: __init__.py  baseVAE.py  infoVAE.py  mlpVAE.py
vae_llf/utils/: __init__.py
