[project]
authors = [{name = "Francisco J. Martínez", email = "pakitochus@gmail.com"}]
dependencies = []
license = "MIT"
readme = "README.md"
description = "A Variational Autoencoder for Longitudinal Latent Feature Analysis of Medical Data"
name = "vae-llf"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vae_llf = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.5.1,<3"
numpy = ">=2.1.3,<3"
pandas = ">=2.2.3,<3"
