[project]
authors = [{name = "Francisco J. Martínez", email = "pakitochus@gmail.com"}]
dependencies = []
license = "MIT"
readme = "README.md"
description = "A Variational Autoencoder for Longitudinal Latent Feature Analysis of Medical Data"
name = "vae-llf"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vae_llf = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.8"        # Adjust based on your Python version
tqdm = ">=4.62"         # For progress bars
tensorboardX = ">=2.4"  # For TensorBoard support
pyyaml = ">=5.4"        # For YAML file handling
numpy = ">=2.1.3,<3"    # for numpy      
pandas = ">=2.2.3,<3"   # for pandas
pytorch = ">=2.5.1,<3"

[tool.pixi.feature.cuda]
platforms = ["linux-64"]
system-requirements = {cuda = "12"} # this will support CUDA minor/patch versions!

[tool.pixi.feature.cuda.dependencies]
jaxlib = { version = "*", build = "cuda12" }

# Environments
[tool.pixi.environments]
cuda = ["cuda"] # maps my "cuda" environment to the "cuda" feature